<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextProjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_name"/>

    <EditText
        android:id="@+id/editTextStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"/>

    <EditText
        android:id="@+id/editTextEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"/>
</LinearLayout>
