<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewProjects1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projects"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonAddProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Project"/>

            <Button
                android:id="@+id/buttonListProjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="List Projects"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/users"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonAddUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_users" />

            <Button
                android:id="@+id/buttonListUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_users" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistics"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonListByUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_stats_user" />

            <Button
                android:id="@+id/buttonListByProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_stats_project" />

            <Button
                android:id="@+id/buttonListByTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_stats_task" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>