<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/textUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_review" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0" />

    <Button
        android:id="@+id/buttonSubmitReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_review" />
</LinearLayout>
